==> yzhkj/my-code/学习stm32练习程序/STM32F1TESTYUYIN1.0/HARDWARE/LD3320/LD3320.c <==
#include "LD3320.h"
#include "DemoSound.h"
#define MP3_BEIJING_START	0x0000;
#define MP3_BEIJING_SIZE	0x08b8;
#define MP3_SHANGHAI_START	0x1000;
#define MP3_SHANGHAI_SIZE	0x0ab0;
#define MP3_TIANJIN_START	0x2000;
#define MP3_TIANJIN_SIZE	0x0a20;
#define MP3_CHONGQING_START	0x3000;
#define MP3_CHONGQING_SIZE	0x0990;
#define MP3_DING_START	0x4000;
#define MP3_DING_SIZE	0x0828;
#define MP3_NIHAO_START	0x5000;
#define MP3_NIHAO_SIZE	0x1170;

static uint8 LD_AsrAddFixed(void)
{
	uint8 k, flag;
	uint8 nAsrAddLength;
	#define DATE_A 6    //数组二维数值
	#define DATE_B 20		//数组一维数值
	//添加关键词，用户修改
	uint8  sRecog[DATE_A][DATE_B] = {
	 			"liu shui deng",\
				"shan shuo",\
				"kai deng",\
				"kai den",\
				"quan mie",\
				"zhuang tai"\
		
																	};	
	uint8  pCode[DATE_A] = {
	 															CODE_LSD,	\
																CODE_SS,	\
																CODE_AJCF,\
																CODE_AJCF,\
																CODE_QM,	\
																CODE_JT		\
															};	//添加识别码，用户修改
	flag = 1;
	for (k=0; k<DATE_A; k++)
	{			
		if(LD_Check_ASRBusyFlag_b2() == 0)
		{
			flag = 0;
			break;
		}

		LD_WriteReg(0xc1, pCode[k] );
		LD_WriteReg(0xc3, 0);
		LD_WriteReg(0x08, 0x04);
		LD3320_delay(1);
		LD_WriteReg(0x08, 0x00);
		LD3320_delay(1);

		for (nAsrAddLength=0; nAsrAddLength<DATE_B; nAsrAddLength++)
		{
			if (sRecog[k][nAsrAddLength] == 0)
				break;
			LD_WriteReg(0x5, sRecog[k][nAsrAddLength]);
		}
		LD_WriteReg(0xb9, nAsrAddLength);
		LD_WriteReg(0xb2, 0xff);
		LD_WriteReg(0x37, 0x04);
		
	}
	printf("LD_AsrAddFixed读寄存器bf:%x\r\n",LD_ReadReg(0xbf));	
	return flag;
}

static void LD3320_GPIO_Cfg(void)
{	
	GPIO_InitTypeDef GPIO_InitStructure;
	
//	RCC_APB2PeriphClockCmd(LD3320RST_GPIO_CLK | LD3320CS_GPIO_CLK,ENABLE);
	//LD_CS	/RSET
	GPIO_InitStructure.Pin =LD3320CS_PIN;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_LOW;
	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
	HAL_GPIO_Init(LD3320CS_GPIO_PORT,&GPIO_InitStructure);

	GPIO_InitStructure.Pin =LD3320RST_PIN;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_LOW;
	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
	HAL_GPIO_Init(LD3320RST_GPIO_PORT,&GPIO_InitStructure);
	
	GPIO_InitStructure.Pin = LD3320WR_PIN;				
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_LOW;
	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
	HAL_GPIO_Init(LD3320WR_GPIO_PORT, &GPIO_InitStructure);
	
}

static void LD3320_EXTI_Cfg(void)
{
	GPIO_InitTypeDef GPIO_Initure;
    GPIO_Initure.Pin=LD3320IRQ_PIN;               //
    GPIO_Initure.Mode=GPIO_MODE_IT_FALLING;     //下降沿触发
    GPIO_Initure.Pull=GPIO_PULLUP;
    HAL_GPIO_Init(LD3320IRQ_GPIO_PORT,&GPIO_Initure);	
   
	HAL_NVIC_SetPriority(EXTI15_10_IRQn,2,3);   //抢占优先级为2，子优先级为3
    HAL_NVIC_EnableIRQ(EXTI15_10_IRQn);         //使能中断线13  

//  EXTI_InitTypeDef EXTI_InitStructure;
//  NVIC_InitTypeDef NVIC_InitStructure;
//  GPIO_InitTypeDef GPIO_InitStructure;
//  RCC_APB2PeriphClockCmd(RCC_APB2Periph_AFIO,ENABLE);	

//  RCC_APB2PeriphClockCmd(LD3320IRQ_GPIO_CLK, ENABLE);
//  GPIO_InitStructure.GPIO_Pin =LD3320IRQ_PIN;
//  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;
//  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
//  GPIO_Init(LD3320IRQ_GPIO_PORT, &GPIO_InitStructure);
//	//外部中断线配置
//  GPIO_EXTILineConfig(LD3320IRQEXIT_PORTSOURCE, LD3320IRQPINSOURCE);
//  EXTI_InitStructure.EXTI_Line = LD3320IRQEXITLINE;
//  EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;
//  EXTI_InitStructure.EXTI_Trigger =EXTI_Trigger_Falling;
//  EXTI_InitStructure.EXTI_LineCmd = ENABLE;
//  EXTI_Init(&EXTI_InitStructure);
//	//中断嵌套配置
//  NVIC_InitStructure.NVIC_IRQChannel = LD3320IRQN;
//  NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 1;
//  NVIC_InitStructure.NVIC_IRQChannelSubPriority = 1;
//  NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
//  NVIC_Init(&NVIC_InitStructure);
}

void EXTI15_10_IRQHandler(void)
{
	HAL_GPIO_EXTI_IRQHandler(LD3320IRQ_PIN);
//	if(EXTI_GetITStatus(LD3320IRQEXITLINE)!= RESET ) 
//	{
//		ProcessInt(); 
// 		printf("进入中断12\r\n");	
//		EXTI_ClearFlag(LD3320IRQEXITLINE);
//		EXTI_ClearITPendingBit(LD3320IRQEXITLINE);//清除LINE上的中断标志位  
//	} 
}

static uint8 spi_send_byte(uint8 byte)
{

    uint8 TxData=byte;
	uint8 RxData;
	int state=5;
    state=HAL_SPI_TransmitReceive(&hspi1,&TxData,&RxData,1, 1000); 
//	printf("spi state:%d\r\n",state);
 	return RxData; 
	
//	while (SPI_I2S_GetFlagStatus(LD3320SPI, SPI_I2S_FLAG_TXE) == RESET);
//	SPI_I2S_SendData(LD3320SPI,byte);
//	while (SPI_I2S_GetFlagStatus(LD3320SPI,SPI_I2S_FLAG_RXNE) == RESET);
//	return SPI_I2S_ReceiveData(LD3320SPI);	
}
